src/test/rustdoc-ui/bare-urls.stderr
error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:5:5
   |
LL | /// https://somewhere.com
   |     ^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com>`
   |
note: the lint level is defined here
  --> $DIR/bare-urls.rs:3:9
   |
LL | #![deny(rustdoc::bare_urls)]
   |         ^^^^^^^^^^^^^^^^^^

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:7:5
   |
LL | /// https://somewhere.com/a
   |     ^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com/a>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:9:5
   |
LL | /// https://www.somewhere.com
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://www.somewhere.com>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:11:5
   |
LL | /// https://www.somewhere.com/a
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://www.somewhere.com/a>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:13:5
   |
LL | /// https://subdomain.example.com
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://subdomain.example.com>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:15:5
   |
LL | /// https://somewhere.com?
   |     ^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com?>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:17:5
   |
LL | /// https://somewhere.com/a?
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com/a?>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:19:5
   |
LL | /// https://somewhere.com?hello=12
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com?hello=12>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:21:5
   |
LL | /// https://somewhere.com/a?hello=12
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com/a?hello=12>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:23:5
   |
LL | /// https://example.com?hello=12#xyz
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://example.com?hello=12#xyz>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:25:5
   |
LL | /// https://example.com/a?hello=12#xyz
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://example.com/a?hello=12#xyz>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:27:5
   |
LL | /// https://example.com#xyz
   |     ^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://example.com#xyz>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:29:5
   |
LL | /// https://example.com/a#xyz
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://example.com/a#xyz>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:31:5
   |
LL | /// https://somewhere.com?hello=12&bye=11
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com?hello=12&bye=11>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:33:5
   |
LL | /// https://somewhere.com/a?hello=12&bye=11
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com/a?hello=12&bye=11>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:35:5
   |
LL | /// https://somewhere.com?hello=12&bye=11#xyz
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com?hello=12&bye=11#xyz>`

error: this URL is not a hyperlink
  --> $DIR/bare-urls.rs:37:10
   |
LL | /// hey! https://somewhere.com/a?hello=12&bye=11#xyz
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use an automatic link instead: `<https://somewhere.com/a?hello=12&bye=11#xyz>`

error: aborting due to 17 previous errors

